# MicroEmployee

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  entrypoint.sh  grail-browser-service.sh  railway.json  slack-app-manifest.yaml
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AuthPage.tsx  ContextPage.tsx  CronPage.tsx  GuardrailsPage.tsx  SettingsPage.tsx  StatusPage.tsx  TasksPage.tsx
grail/: Cargo.toml
grail/crates/grail-server/: Cargo.toml
grail/crates/grail-server/defaults/: AGENTS.md
grail/crates/grail-server/defaults/context/: INDEX.md
grail/crates/grail-server/migrations/: 0002_secrets_and_permissions.sql  0003_codex_device_login.sql  0004_worker_lock.sql  0010_task_files.sql  0013_rebrand_agent_name_grail.sql  0017_task_traces.sql  0018_github_client_id_setting.sql  0019_messaging_channels.sql
grail/crates/grail-server/src/: api.rs  bootstrap.rs  codex.rs  codex_login.rs  config.rs  crypto.rs  db.rs  discord.rs  github_login.rs  main.rs  models.rs  msteams.rs  secrets.rs  slack.rs  templates.rs  whatsapp.rs  worker.rs
grail/crates/grail-server/templates/: approvals.html  auth.html  context.html  context_edit.html  context_view.html  cron.html  diagnostics.html  guardrails.html  layout.html  memory.html  settings.html  status.html  tasks.html
grail/crates/grail-slack-mcp/: Cargo.toml
grail/crates/grail-slack-mcp/src/: main.rs
