[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
cron = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
html2text = "0.16.7"
http = "1.3.1"
once_cell = "1.21.3"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
] }
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rmcp = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.23"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"
